zeit.cms changes
================

1.40.4 (unreleased)
-------------------

- Fix that text fields which are mapped to xml nodes still work even when there
  is no py:pytype and the contents is an integer (#6824).


1.40.3 (2010-02-23)
-------------------

- Site settings' working directory creator ignores empty path elements
  correctly now.


1.40.2 (2010-01-16)
-------------------

- ITZInfo-Adapter für alle Requests registriert, nicht nur für BrowserRequest.


1.40.1 (2010-01-16)
-------------------

- Index-Updater ``load_references`` repariert (no interaction, #6713).

- Security-Problem bei Bild-XMLReferenz behoben.

1.40.0 (2009-12-18)
-------------------

- Favicon aktualisiert.
- Wenn im XML für die Keywords ein Fehler ist, wird das Laden abgebrochen und
  die alte Fassung behalten (#6046).
- Last-semantic-change wird direkt beim Anlegen eines Objektes gestzt, nicht
  erst beim Einchecken (#6476).
- Neue Option »Schlagzeile«.
- Bilder, die aus Bildergruppen kommen, übernehmen die expires-Einstellung der
  Gruppe (#6662).
- Ressort wird in die XML-Referenz (z. B. in Feeds) übernommen (#6650).

Technische Änderungen
+++++++++++++++++++++

- Relationen zwischen Content-Objekten werden über einen allgemeinen Index
  abgebildet, nicht mehr einzelne (related, syndicated, image) (#6300).

1.39.3 (2009-11-25)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Fehlertolerante Funktion zum XML parsen: objectify_soup_fromstring.
- Das XMLTree-Feld hat einen optionalen Parameter tidy_input, mit dem es
  kaputtes Markup per BeautifulSoup repariert.

1.39.2 (2009-11-06)
-------------------

- Daten an das Veröffentlichungsscript werden nicht mehr per STDIN übermittelt
  sondern per Datei und Argument.


1.39.1 (2009-11-04)
-------------------

Technische Änderungen
+++++++++++++++++++++

- Ermöglicht zusätzliche Drop-Query-Argumente bei
  ``createDraggableContentObject`` anzugeben.


1.39.0 (2009-11-02)
-------------------

Technische Änderungen