@@ -10,5 +10,14 @@
 
   <adapter factory=".badge.MetadataUpdater" name="badge" />
 
-</configure>
+  <interface
+    interface=".interfaces.IBadges"
+    type=".interfaces.IAssetInterface"
+    />
 
+  <interface
+    interface="zeit.cms.related.interfaces.IRelatedContent"
+    type=".interfaces.IAssetInterface"
+    />
+
+</configure>
