@@ -6,8 +6,6 @@
 
   <adapter factory=".image.imagefolder_browse_location" />
   <adapter factory=".image.imageadapter_browse_location" />
-  <subscriber handler=".form.register_asset_interface" />
-
   <resourceLibrary name="zeit.content.image">
     <directory source="resources" />
   </resourceLibrary>
