@@ -83,9 +83,3 @@ class EditForm(ImageFormBase, zeit.cms.browser.form.EditForm):
                 [blob], self.prefix, self.context, self.request,
                 adapters=self.adapters, ignore_request=ignore_request)
         return widgets
-
-
-@zope.component.adapter(zope.app.appsetup.interfaces.IDatabaseOpenedEvent)
-def register_asset_interface(event):
-    zeit.cms.content.browser.form.AssetBase.add_asset_interface(
-        zeit.content.image.interfaces.IImages)
