@@ -7,6 +7,9 @@ zeit.cms changes
 - Fix that text fields which are mapped to xml nodes still work even when there
   is no py:pytype and the contents is an integer (#6824).
 
+- Change the way asset interfaces are registered. This fixes isolation problems
+  during tests (#6712).
+
 
 1.40.3 (2010-02-23)
 -------------------
